<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@drawable/splashscreen"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/img_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/txtDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:fontFamily="sans-serif-light"
            tools:text="Sunny Day Walk"
            android:visibility="gone"
            android:textColor="@color/clr_white"
            android:textSize="@dimen/_20sdp" />
        <TextView
            android:id="@+id/txt_name_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:textColor="@color/clr_white"
            android:visibility="gone"
            android:textSize="@dimen/_15sdp"
            tools:text="Ha Noi"
            android:layout_below="@+id/txtDestination"
            android:textAllCaps="false"
            android:drawableLeft="@drawable/ic_location"
            />

        <ImageView
            android:id="@+id/img_bgWeather"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:src="@drawable/ic_map"/>


        <HorizontalScrollView
            android:id="@+id/hsv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_90sdp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_50sdp"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/scrollViewWeather"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible"
                tools:ignore="ScrollViewSize">

                <TextView
                    android:id="@+id/txt_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="--"
                    android:textColor="@color/clr_white"
                    android:textSize="@dimen/_80sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="-10dp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:fontFamily="sans-serif-thin"
                    android:text="°"
                    android:textColor="@color/clr_white"
                    android:textSize="@dimen/_80sdp" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@color/clr_white"
                    android:orientation="vertical"
                    android:paddingRight="@dimen/_10sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:alpha="0.7"
                        android:text="@string/str_sunrise"
                        android:textSize="@dimen/_13sdp" />

                    <TextView
                        android:id="@+id/txt_sunTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="__-__"
                        android:textSize="@dimen/_20sdp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@color/clr_white"
                    android:orientation="vertical"
                    android:paddingRight="@dimen/_10sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:alpha="0.7"
                        android:text="@string/str_wind"
                        android:textSize="@dimen/_13sdp" />

                    <TextView
                        android:id="@+id/txt_wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="--km/h"
                        android:textSize="@dimen/_20sdp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@color/clr_white"
                    android:orientation="vertical"
                    android:paddingRight="@dimen/_10sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:alpha="0.7"
                        android:text="@string/str_humidity"
                        android:textSize="@dimen/_13sdp" />

                    <TextView
                        android:id="@+id/txt_humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="--%"
                        android:textSize="@dimen/_20sdp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@color/clr_white"
                    android:orientation="vertical"
                    android:paddingRight="@dimen/_10sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:alpha="0.7"
                        android:text="@string/str_cloud"
                        android:textSize="@dimen/_13sdp" />

                    <TextView
                        android:id="@+id/txt_clouds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="--%"
                        android:textSize="@dimen/_20sdp" />
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>
    </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <include layout="@layout/bottom_bar_home" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
